Еще одна попытка

--- a/index.html
+++ b/index.html
@@ -56,6 +56,6 @@
             sadsadsa
         </div>
     </div>
-    <script src="/js/AnimationForBackground.js"/>
+    <script src="js/AnimationForBackground.js"></script>
 </body>
 </html>
