--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap" rel="stylesheet">
     <title>Камень-ножницы-бумага</title>
 </head>
 <body>
@@ -53,9 +56,27 @@
             </div>
         </div>
         <div class="menu">
-            sadsadsa
+            <div class="menu-header">
+                Меню
+            </div>
+            <div class="status">
+
+            </div>
+            <div class="button start">
+            </div>
+            <div class="settings">
+                <ul class="listsettings">
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                </ul>
+            </div>
         </div>
     </div>
     <script src="js/AnimationForBackground.js"></script>
+    <script src="js/CardUp.js"></script>
 </body>
 </html>
