Кнопка старта и настройки

--- a/index.html
+++ b/index.html
@@ -62,13 +62,14 @@
             <div class="status">
 
             </div>
-            <div class="button start">
-            </div>
+            <button class="button start">
+                Начать
+            </button>
             <div class="settings">
                 <ul class="listsettings">
-                    <li></li>
-                    <li></li>
-                    <li></li>
+                    <li class = "matches">Кол-во матчей <input type="number" value="3"></li>
+                    <li class = "animforcardback">Анимация вращения<input type="number" value="15"></li>
+                    <li class = "timeformatch">Время на матч <input type="number" value="3"></li>
                     <li></li>
                     <li></li>
                     <li></li>
@@ -78,5 +79,6 @@
     </div>
     <script src="js/AnimationForBackground.js"></script>
     <script src="js/CardUp.js"></script>
+    <script src="js/LogicForGame.js"></script>
 </body>
 </html>
