--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <title>Камень-ножницы-бумага</title>
 </head>
 <body>
+    <div class="blocker"></div>
     <div class="container">
         <div class="container-left-part">
             <div class="hand-bot">
