Старт/Стоп готов --- Сделать анимацию для карт Историю побед и поражений Анимацию при победе/поражении

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 
             </div>
             <button class="button start">
-                Начать
+                Старт/Стоп
             </button>
             <div class="settings">
                 <ul class="listsettings">
