--- a/index.html
+++ b/index.html
@@ -118,9 +118,9 @@
             <div class="settings">
                 <div class="blockerformenu"></div>
                 <ul class="listsettings">
-                    <li class = "matches">Кол-во матчей в раунде<input type="number" value="3" id="idmatches" pattern="^[1-9]{1}[0-9]+"></li>
+                    <li class = "matches">Кол-во матчей в раунде<input type="number" value="3" id="idmatches" pattern="^[1-9][0-9]+$"></li>
                     <!--<li class = "animforcardback">Анимация вращения<input type="number" value="15" id="idanimforcardback"></li>-->
-                    <li class = "timeformatch">Время на матч<input type="number" value="3" id="idtimeformatch" pattern="^[1-9]{1}[0-9]+"></li>
+                    <li class = "timeformatch">Время на матч<input type="number" value="3" id="idtimeformatch" pattern="^[1-9][0-9]+$"></li>
                     <li>Переход к следующему раунду сразу после выбора карты<input type="checkbox" class="skiptimer" onclick="CheckSkipTimer(this)"></li>
                     <li></li>
                     <li></li>
@@ -134,34 +134,6 @@
         Статистика
     </div>
     <div class="stats">
-        <table class="container-table">
-            <caption>История игр</caption>
-            <thead>
-              <tr>
-                <th><h1>Победитель</h1></th>
-                <th><h1>Побед</h1></th>
-                <th><h1>Поражений</h1></th>
-              </tr>
-            </thead>
-            <tbody id="historyofgames">
-
-            </tbody>
-        </table>
-        <table class="container-table">
-            <caption>Кол-во сыгранных карт (бот и игрок)</caption>
-            <thead>
-              <tr>
-                <th><h1>✊</h1></th>
-                <th><h1>✂️</h1></th>
-                <th><h1>✋</h1></th>
-                <th><h1>🦎</h1></th>
-                <th><h1>🦊</h1></th>
-              </tr>
-            </thead>
-            <tbody id="counterforcards">
-                
-            </tbody>
-        </table>
         <div class="chart">
             Процент побед
             <svg viewBox="0 0 36 36" class="circular-chart orange">
@@ -179,6 +151,34 @@
             <text x="18" y="20.35" class="percentage" id="orange-chart-percent">0%</text>
             </svg>
         </div>
+        <table class="container-table">
+            <caption>Кол-во сыгранных карт (бот и игрок)</caption>
+            <thead>
+              <tr>
+                <th><h1>✊</h1></th>
+                <th><h1>✂️</h1></th>
+                <th><h1>✋</h1></th>
+                <th><h1>🦎</h1></th>
+                <th><h1>🦊</h1></th>
+              </tr>
+            </thead>
+            <tbody id="counterforcards">
+                
+            </tbody>
+        </table>
+        <table class="container-table">
+            <caption>История игр</caption>
+            <thead>
+              <tr>
+                <th><h1>Победитель</h1></th>
+                <th><h1>Побед</h1></th>
+                <th><h1>Поражений</h1></th>
+              </tr>
+            </thead>
+            <tbody id="historyofgames">
+
+            </tbody>
+        </table>
     </div>
     <div class="blocker"></div>
     <script src="js/main.js"></script>
